<resources>
    <string name="app_name">Travel</string>
    <string name="start">Start</string>
    <string name="cover_image_label">Cover image</string>
    <string name="version_text">Version %1$s.%2$s.%3$s</string>
    <string name="version_major" translatable="false">1</string>
    <string name="version_minor" translatable="false">15</string>
    <string name="version_patch" translatable="false">10</string>
    <string name="title_activity_travel">Travel</string>
    <string name="concelho">Municipality</string>
    <string name="municipio">Municipality</string>
    <string name="province">Province</string>
    <string name="intermunicipal_entity">Intermunicipal Entity</string>
    <string name="district">District</string>
    <string name="region">Region</string>
    <string name="autonomous_community">Autonomous Community</string>
    <string name="parish">Parish</string>
    <string name="comarca">Comarca</string>
    <string name="means_transport">Means of transport</string>
    <string name="cardinal_point">Cardinal point</string>
    <string name="default_initial_location" translatable="false">Guerreiros do Rio</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="main_menu_travel">Travel</string>
    <string name="main_menu_car">Car</string>
    <string name="accelerate">Accelerate</string>
    <string name="brake">Brake</string>
    <string name="gear_up" translatable="false">+</string>
    <string name="gear_down" translatable="false">-</string>
    <string name="default_initial_int" translatable="false">0</string>
    <string name="neutral">Neutral</string>
    <string name="reverse">Reverse</string>
    <string name="car">Car</string>
    <string name="train">Train</string>
    <string name="boat">Boat</string>
    <string name="plane">Plane</string>
    <string name="vehicle_bus">Bus</string>
    <string name="vehicle_van">Van</string>
    <string name="vehicle_car">Car</string>
    <string name="title_activity_car">Driving</string>
    <string name="title_activity_car_menu">Vehicle Selection</string>
    <string name="no_destination">No Available Destinations</string>
    <string name="high_speed_train">High-Speed Train</string>
    <string name="brief_info_pt">%1$s, %2$s District, Portugal</string>
    <string name="brief_info_es_multiprovince">%1$s, %2$s Province, %3$s, Spain</string>
    <string name="brief_info_es_uniprovince">%1$s, %2$s, Spain</string>
    <string name="brief_info_gi">Gibraltar</string>
    <string name="brief_info_separator" translatable="false">----------------------------------------</string>
    <string name="iberian_peninsula">Iberian Peninsula</string>
    <string name="gibraltar">Gibraltar</string>
    <string name="around">Around</string>
    <string name="transfer">Transfer</string>
    <string name="subway">Subway</string>
    <string name="infinite">Infinite</string>
    <string name="subregion">Subregion</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="setting_car_mode_title">Car mode</string>
    <string name="setting_car_mode_summary_on">Simulate car journey when travelling between locations</string>
    <string name="setting_car_mode_summary_off">Travel directly to the destination</string>
    <string name="settings_key_car_mode" translatable="false">car_mode</string>
    <string name="car_marker_text">Current location</string>
</resources>