<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/car"
        android:title="@string/car"
        android:icon="@drawable/car_icon"/>
    <item
        android:id="@+id/train"
        android:title="@string/train"
        android:icon="@drawable/train_icon"/>
    <item
        android:id="@+id/boat"
        android:title="@string/boat"
        android:icon="@drawable/boat_icon"/>
    <item
        android:id="@+id/ship"
        android:title="@string/ship"
        android:icon="@mipmap/ship_icon"/>
    <item
        android:id="@+id/plane"
        android:title="@string/plane"
        android:icon="@mipmap/plane_icon"/>
    <item
        android:id="@+id/highSpeedTrain"
        android:title="@string/high_speed_train"
        android:icon="@mipmap/high_speed_train_icon"/>
    <item
        android:id="@+id/subway"
        android:title="@string/subway"
        android:icon="@drawable/subway_icon"/>
    <item
        android:id="@+id/transfer"
        android:title="@string/transfer"
        android:icon="@drawable/transfer_icon"/>
    <item
        android:id="@+id/hiking"
        android:title="@string/hiking"
        android:icon="@drawable/hiking_icon"/>
</menu>